[package]
name = "leveldb-rs"
version = "0.1.0"
authors = ["storagezhang <storagezhang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.8.1"
# lazy_static = "1.4.0"
rlibc = "1.0.0"


[dev-dependencies]
rand = "0.3"